# relodi

./: .gitignore  .gitmodules  CMakeLists.txt  relodi.code-workspace  submodule.load.bash
CMake/: common_posix.cmake  common_windows.cmake  functions.cmake  macros.cmake  start.cmake  third_libs.cmake
CMake/third_libs/: argparse.cmake  minilzo.cmake  pugixml-posix.cmake  pugixml-windows.cmake  pugixml.cmake  qt-posix.cmake  qt-windows.cmake  qt.cmake  uncrustify.cmake  xxd-compressed.cmake  xxd-posix.cmake  xxd-windows.cmake  xxd.cmake  zip.cmake
src/: CMakeLists.txt
src/base/: CMakeLists.txt
src/base/common/: CMakeLists.txt  algorithm_ext.h  base62_encoder.cpp  base62_encoder.h  base64_encoder.cpp  base64_encoder.h  base_math.h  common.cpp  common.h  crc.cpp  crc.h  format.cpp  format.h  half_matrix.h  light_search.cpp  log.cpp  log.h  nocopy.h  overload.h  random.cpp  random.h  shared_mutex.cpp  singleton.h  timehelp.h  tuple_ext.h
src/projects/: CMakeLists.txt
src/projects/relodi-common/: CMakeLists.txt  header_block0.cpp  header_block0.h  header_block1.cpp  header_block1.h  relodi-common.h
src/projects/relodi-file-sniffer/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt
src/test/block-walker/: CMakeLists.txt  main.cpp
