###################################################################################################
#
#  Created on: Aug 2, 2023
#      Author: Alexander Ksenofontov
#
###################################################################################################

add_subdirectory(test)
add_subdirectory(base)
