###################################################################################################
#
#  Created on: Aug 2, 2023
#      Author: Alexander Ksenofontov
#
###################################################################################################

add_subdirectory(relodi-file-sniffer)
add_subdirectory(relodi-common)